syntax = "proto3";
//import "google/protobuf/empty.proto"; //Para pasar paramatros de entrada mensajes vacios.
package com.sistemasdistribuidos;

message Empty {}

message User {
  string name = 1;
  string email = 2;
  string user = 3;
  string password = 4;
}

message Response {
  string response = 1;
}

service UserService{
  rpc createUser(User) returns (User) {}
  rpc getFavouriteUsers(Empty) returns (stream User) {}
  rpc hello(Empty) returns (Response) {}
}
